--- a/app/index.html
+++ b/app/index.html
@@ -25,15 +25,17 @@
                 }).otherwise({
                     redirectTo: '/'
                 })
-            }).controller('LoginCtrl', function ($scope,$http) {
+            }).controller('LoginCtrl', function ($scope,$http,$location) {
                 $scope.login = function(){
                     // $http = $.ajax
                     $http({
                         url:'http://localhost:3000/login',
                         method:'POST',
-                        data:{email:$scope.email},
-                        success:function(data){
-                            console.log(data);
+                        data:{email:$scope.email}
+                    }).success(function(data){
+                        console.log(data);
+                        if(data.code == 'success'){
+                            $location.path('/rooms');
                         }
                     });
                 }
